css/terminal.css
html,
body {
  height: 100%;
}

/* Force the default behavior of the font-awesome icons. */
.fa {
  font-size: inherit;
}

/* Override for inks default page layout */
.ink-grid {
  height: 100%;
  margin: 0;
  max-width: none;
  padding: 0;
  width: 100%;
}

.all-auto {
  flex: 1 1 450px;
}

.terminal-container {
  align-self: center;
  border-radius: 5px;
  height: 96%;
  margin: 0 10px 0 20px;
  max-width: 50%;
  overflow-y: auto;
}

.chart-container {
  align-self: center;
  border-radius: 5px;
  display: flex;
  height: 96%;
  margin: 0 20px 0 10px;
  max-width: 50%;
}

.datagraph {
  height: 90%;
  width: 90%;
}

@media (max-width: 960px) {
  .terminal-container {
    height: 47%;
    margin: 0 20px 0 20px;
    max-width: 100%;
  }
  .chart-container {
    height: 47%;
    margin: 0 20px 0 20px;
    max-width: 100%;
  }
}

.terminal {
  font-family: Hack, monospace;
  font-weight: normal;
}

.terminal-background {
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
}

.terminal .container {
  padding: 1em 1.5em;
  position: relative;
}

.terminal .container output {
  clear: both;
  width: 100%;
}

.terminal .cmdline {
  background-color: transparent;
  border: none;
  color: inherit;
  font: inherit;
  margin: 0;
  width: 100%;
}

.terminal .cmdline:focus {
  outline: 0;
}

.terminal .hidden {
  display: none;
}

.terminal .prompt {
  margin-right: 7px;
  white-space: nowrap;
}

.terminal .prefix {
  margin-left: 25px;
}

.terminal output table.input-line td:last-child {
  padding-left: 1px;
}

.terminal table.input-line {
  border-collapse: collapse;
  border-spacing: 0;
  margin: 0;
  padding: 0;
  width: 100%;
}

.terminal table.input-line td {
  margin: 0;
  padding: 5px 0;
}

.terminal table.line td {
  padding: 6px 0;
}

.terminal table.ink-table {
  background: transparent;
}

.terminal table.ink-table tr th, table.ink-table tr td {
  border-bottom: none;
}

.terminal table.ink-table {
  margin-left: 3px;
}

/* Monokai theme */

.terminal-monokai {
  background: #272822;
  border: 1px solid black;
  color: #F8F8F2;
}

.terminal-monokai .answer {
  color: #A6E22E;
}

.terminal-monokai a {
  color: #66D9EF;
}

.terminal-monokai-background {
  background: #3E4438;
}

.terminal-monokai ::-moz-selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-monokai ::selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-monokai .prefix {
  color: #a8a8a2;
}

.terminal-monokai .prompt {
  color: #FD971F;
}

.terminal-monokai .cmderror {
  color: #F92672;
}

.chart-monokai {
  background: #272822;
  border: 1px solid black;
}

/* Github theme */

.terminal-github {
  background: #f8f8f8;
  border: 1px solid #303438;
  color: #333;
}

.terminal-github .answer {
  color: #0086b3
}

.terminal-github a {
  color: #000080;
}

.terminal-github-background {
  background: #767F88;
}

.terminal-github ::-moz-selection {
  background: #458;
  color: #dfd;
}

.terminal-github ::selection {
  background: #458;
  color: #dfd;
}

.terminal-github .prefix {
  color: #998;
}

.terminal-github .prompt {
  color: #009926;
}

.terminal-github .cmderror {
  color: #d14;
}

.chart-github {
  background: #f8f8f8;
  border: 1px solid #303438;
}

/* XCode theme */

.terminal-xcode {
  background: #fff;
  border: 1px solid #1C140D;
  color: black;
}

.terminal-xcode .answer {
  color: #1c00cf;
}

.terminal-xcode a {
  color: #3f6e74;
}

.terminal-xcode-background {
  background: #515151;
}

.terminal-xcode ::-moz-selection {
  background: #643820;
  color: #c5af75;
}

.terminal-xcode ::selection {
  background: #643820;
  color: #c5af75;
}

.terminal-xcode .prefix {
  color: #9b703f;
}

.terminal-xcode .prompt {
  color: #5c2699;
}

.terminal-xcode .cmderror {
  color: #c41a16;
}

.chart-xcode {
  background: #fff;
  border: 1px solid #1C140D;
}

/* Obsidian theme */

.terminal-obsidian {
  background: #282b2e;
  border: 1px solid #734E4E;
  color: #e0e2e4;
}

.terminal-obsidian .answer {
  color: #93c763;
}

.terminal-obsidian a {
  color: #668bb0;
}

.terminal-obsidian-background {
  background: #323B39;
}

.terminal-obsidian ::-moz-selection {
  background:  #e8e2b7;
  color:  #557182;
}

.terminal-obsidian ::selection {
  background: #e8e2b7;
  color: #557182;
}

.terminal-obsidian .prefix {
  color: #818e96;
}

.terminal-obsidian .prompt {
  color: #d39745;
}

.terminal-obsidian .cmderror {
  color: #ec7600;
}

.chart-obsidian {
  background: #282b2e;
  border: 1px solid #734E4E;
}

/* Visual Studio theme */

.terminal-vs {
  background: white;
  border: 1px solid #A1C1BE;
  color: black;
}

.terminal-vs .answer {
  color: #008000;
}

.terminal-vs a {
  color: #00f;
}

.terminal-vs-background {
  background: #59554E;
}

.terminal-vs ::-moz-selection {
  background: #00b0e8;
  color: white;
}

.terminal-vs ::selection {
  background: #00b0e8;
  color: #557182;
}

.terminal-vs .prefix {
  color: #557182;
}

.terminal-vs .prompt {
  color: #2b91af;
}

.terminal-vs .cmderror {
  color: #a31515;
}

.chart-vs {
  background: white;
  border: 1px solid #A1C1BE;
}

/* Arta theme */

.terminal-arta {
  background: #222;
  border: 1px solid #921129;
  color: #fff;
}

.terminal-arta .answer {
  color: #00cc66;
}

.terminal-arta a {
  color: #32aaee;
}

.terminal-arta-background {
  background: #756657;
}

.terminal-arta ::-moz-selection {
  background: #ffcc33;
  color: #444;
}

.terminal-arta ::selection {
  background: #ffcc33;
  color: #444;
}

.terminal-arta .prefix {
  color: #aaa;
}

.terminal-arta .prompt {
  color: #6644aa;
}

.terminal-arta .cmderror {
  color: #bb1166;
}

.chart-arta {
  background: #222;
  border: 1px solid #921129;
}

/* Railcasts theme */

.terminal-railcasts {
  background: #232323;
  border: 1px solid #111E17;
  color: #e6e1dc;
}

.terminal-railcasts .answer {
  color: #519f50;
}

.terminal-railcasts a {
  color: #6d9cbe;
}

.terminal-railcasts-background {
  background: #4B4545;
}

.terminal-railcasts ::-moz-selection {
  background: #bc9458;
  color: #d0d0ff;
}

.terminal-railcasts ::selection {
  background: #ffcc33;
  color: #444;
}

.terminal-railcasts .prefix {
  color: #4a410d;
}

.terminal-railcasts .prompt {
  color: #a5c261;
}

.terminal-railcasts .cmderror {
  color: #da4939;
}

.chart-railcasts {
  background: #232323;
  border: 1px solid #111E17;
}

/* Chalkboard theme */

.terminal-chalkboard {
  background: darkslategray;
  border: 1px solid #1A2E2E;
  color: #F8F8F2;
}

.terminal-chalkboard .answer {
  color: #A6E22E;
}

.terminal-chalkboard a {
  color: #66D9EF;
}

.terminal-chalkboard-background {
  background: #151C1C;
}

.terminal-chalkboard ::-moz-selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-chalkboard ::selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-chalkboard .prefix {
  color: #a8a8a2;
}

.terminal-chalkboard .prompt {
  color: #FD971F;
}

.terminal-chalkboard .cmderror {
  color: #F92672;
}

.chart-chalkboard {
  background: darkslategray;
  border: 1px solid #1A2E2E;
}

/* dark theme */

.terminal-dark {
  background: #040004;
  border: 1px solid #040004;
  color: #F8F8F2;
}

.terminal-dark .answer {
  color: #C8FF00;
}

.terminal-dark a {
  color: #66D9EF;
}

.terminal-dark-background {
  background: #413D3D;
}

.terminal-dark ::-moz-selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-dark ::selection {
  background: #75715e;
  color: #e6db74;
}

.terminal-dark .prefix {
  color: #a8a8a2;
}

.terminal-dark .prompt {
  color: #FD971F;
}

.terminal-dark .cmderror {
  color: #FA023C;
}

.chart-dark {
  background: #040004;
  border: 1px solid #040004;
}

/* Custom webkit scrollbars
   for example, monokai theme
   .terminal-monokai::-webkit-scrollbar
*/

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-button {
  height:5px;
  width: 8px;
}

::-webkit-scrollbar-track {
  background: transparent;
  /*background:#eee;*/
  /*border: thin solid lightgray;
  box-shadow: 0px 0px 3px #dfdfdf inset;
  border-radius:10px;*/
}

::-webkit-scrollbar-thumb {
  background:#999;
  border: thin solid gray;
  border-radius:10px;
}

::-webkit-scrollbar-thumb:hover {
  background:#7d7d7d;
}

